# dict

./: KEYBOARD_SHORTCUTS.md  README.md  float.html  overlay.html  package-lock.json  package.json  vite.config.ts
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-build.txt  task-1-dev-output.txt  task-1-init.txt  task-1-structure.txt  task-10-select.txt  task-11-screenshot.txt  task-12-history.txt  task-13-tts.txt  task-14-perf.txt  task-15-build.txt  task-2-install.txt  task-2-tools.txt  task-3-window.txt  task-4-render.txt  task-5-settings.txt  task-6-compile.txt  task-7-compile.txt  task-8-hotkey.txt  task-9-input.txt
.sisyphus/plans/: fix-translation-results.md  quick-fix-app-tsx.md  windows-dictionary-app.md
src/: App.tsx  float.tsx  index.css  overlay.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  main.rs  models.rs
src-tauri/src/dictionary/: mod.rs
src-tauri/src/hotkey/: mod.rs  models.rs
src-tauri/src/ocr/: mathpix.rs  mod.rs  models.rs  paddle.rs
src-tauri/src/phonetic/: mod.rs
src-tauri/src/services/: alibaba.rs  claude.rs  deepl.rs  ernie.rs  google.rs  google_free.rs  mod.rs  openai.rs
src-tauri/src/translate/: mod.rs
src-tauri/src/tts/: mod.rs  models.rs
src/components/: Favorites.tsx  FloatWindow.tsx  History.tsx  InputTranslation.tsx  ScreenshotTranslation.tsx  SelectTranslation.tsx  Settings.tsx  Sidebar.tsx  ThemeCard.tsx  TranslationResult.tsx
src/hooks/: index.ts  useDebug.ts  useEventListeners.ts  useHotkeys.ts  useTheme.ts  useWindowState.ts
src/locales/: index.ts
src/stores/: favoritesStore.ts  historyStore.ts  requestDedupStore.ts  settingsStore.ts  translationCacheStore.ts
