[package]
name = "dict-win"
version = "0.1.0"
description = "Windows Dictionary App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
hmac = "0.12"
sha1 = "0.10"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Graphics_Capture", "Media_Ocr", "Media_SpeechSynthesis", "Foundation", "Storage_Streams", "Graphics_Imaging"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
