[package]
name = "dict-win"
version = "0.1.0"
description = "Windows Dictionary App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
hmac = "0.12"
sha1 = "0.10"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4"] }
enigo = "0.6.1"
futures-util = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["implement", "Graphics_Capture", "Media_Ocr", "Media_SpeechSynthesis", "Media_Playback", "Media_Core", "Foundation", "Storage_Streams", "Graphics_Imaging", "Globalization", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_Graphics_GdiPlus", "Win32_Foundation"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
